# csv_to_json

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  configure.sh  csv_to_json.rs  input.csv
src/: main.rs
testdata/: input.csv  output.json
